--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "axios": "^0.21.1",
     "moment": "^2.29.1",
+    "socket.io-client": "^4.0.1",
     "sweetalert2": "^10.16.5",
     "vue": "^2.6.11",
     "vue-axios-cors": "^1.0.1",
